@@ -4191,18 +4191,18 @@
     },
     {
         "name": "drupal/metatag",
-        "version": "1.8.0",
-        "version_normalized": "1.8.0.0",
+        "version": "1.9.0",
+        "version_normalized": "1.9.0.0",
         "source": {
             "type": "git",
             "url": "https://git.drupalcode.org/project/metatag.git",
-            "reference": "8.x-1.8"
+            "reference": "8.x-1.9"
         },
         "dist": {
             "type": "zip",
-            "url": "https://ftp.drupal.org/files/projects/metatag-8.x-1.8.zip",
-            "reference": "8.x-1.8",
-            "shasum": "fb5d31aa08c8c2e175f096f9917e9741db152ea8"
+            "url": "https://ftp.drupal.org/files/projects/metatag-8.x-1.9.zip",
+            "reference": "8.x-1.9",
+            "shasum": "230960752c5afa17337fb69bae853bccb1a26ecd"
         },
         "require": {
             "drupal/core": "*",
@@ -4224,8 +4224,8 @@
                 "dev-1.x": "1.x-dev"
             },
             "drupal": {
-                "version": "8.x-1.8",
-                "datestamp": "1550692511",
+                "version": "8.x-1.9",
+                "datestamp": "1563995941",
                 "security-coverage": {
                     "status": "covered",
                     "message": "Covered by Drupal's security advisory policy"
